--- a/inicio.html
+++ b/inicio.html
@@ -15,7 +15,8 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	</head>
 	<body> 
-		<div class="container">	
+    <!--<div class="container">-->
+	<div class="container-fluid">
 		<div class="row">
 						
 			<div class="col-4" style="position:relative !important">
@@ -35,7 +36,7 @@
 			   </div>
 			</div>
 			<div class="col-4" id="IESSANISIDRO"><a href="inicio.html">IES SAN ISIDRO</a></div>
-			<div class="col-4" id="persona"><img src="imgs/persona.png" height="38" width="38"></div>
+			<div class="col-4" id="persona"><a href="inicioSesion.html"><img src="imgs/persona.png" height="38" width="38"></a></div>
 		</div>
 		
 		<ul class="nav nav-justified">
@@ -60,7 +61,7 @@
 			    <img src="imgs/foto_noticias.png" alt="Cargando imagen...">
 			  </div>
 			</div>
-			<div class="caja col-md-6 col-12">
+			<div id="texto" class="caja col-md-6 col-12">
 				
 	          <div class="cms-content brief autoclear">
 	             <article class="html-page">
@@ -122,6 +123,7 @@
 				<img src="imgs/madrid2.png">
 			</div>
 		</div>
-		</div>
+	</div>
+	<!--</div>-->
 	</body>
 </html>
