--- a/inicio.html
+++ b/inicio.html
@@ -109,7 +109,7 @@
 		
 		<hr>
 		<div class="row">
-			<div class="col-md-4 col-12">
+			<div class="col-md-4 col-12" id="educamadrid">
 				EducaMadrid - 2020 - Consejer&iacute;a de Educaci&oacute;n y Juventud
 			</div>
 			<div class="col-md-4 col-12" id="cont">
