--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -39,7 +39,7 @@
                         <form action="/action_page.php" method="get">
                             <input type="email" id="email" name="email" placeholder="E-mail"><br><br>
                             <input type="password" id="password" name="password" placeholder="Contrase&ntilde;a"><br><br>
-                            <a href="">He olvidado mi contrase&ntilde;a</a><br><br>
+                            <div id="olvidado"><a href="">He olvidado mi contrase&ntilde;a</a><br><br></div>
                             <input type="submit" class="btn btn-warning" id="submit" value="Iniciar sesi&oacute;n">
                         </form>
                     </div>
