--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -36,7 +36,7 @@
                     </div>
                     <hr>
                     <div id="form">
-                        <form action="/action_page.php" method="get">
+                        <form action="inicio2.html" method="get">
                             <input type="email" id="email" name="email" placeholder="E-mail"><br><br>
                             <input type="password" id="password" name="password" placeholder="Contrase&ntilde;a"><br><br>
                             <div id="olvidado"><a href="">He olvidado mi contrase&ntilde;a</a><br><br></div>
