--- a/horario.html
+++ b/horario.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Inicio</title>
+		<title>Horario</title>
 		
 		<link rel="stylesheet" href="css/estilos.css"/>
 		<link rel="stylesheet" href="css/horario.css"/>
@@ -61,11 +61,87 @@
             <div id="horario">
                 <p>HORARIO</p>
                 <div class="row">
-                    <div class="col-1"></div>
-                    <div class="col-1"><span class="icon-circle-left"></span></div>
-                    <div class="col-8"></div>
-                    <div class="col-1"><span class="icon-circle-right"></span></div>
-                    <div class="col-1"></div>
+                    <div class="col-md-1 col-0"></div>
+                    <div class="col-md-1 col-1"><span class="icon-circle-left"></span></div>
+                    <div class="col-md-8 col-10"></div>
+                    <div class="col-md-1 col-1"><span class="icon-circle-right"></span></div>
+                    <div class="col-md-1 col-0"></div>
+                </div>
+                <div class="row" id="tabla">
+                    <div class="col-md-2 col-1"></div>
+                    <div class="col-md-8 col-10">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th scope="col"></th>
+                                    <th scope="col">Lunes</th>
+                                    <th scope="col">Martes</th>
+                                    <th scope="col">Mi&eacute;rcoles</th>
+                                    <th scope="col">Jueves</th>
+                                    <th scope="col">Viernes</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="table-active"> 
+                                    <td>16-22 DE NOVIEMBRE</td>
+                                    <td>16</td>
+                                    <td>17</td>
+                                    <td>18</td>
+                                    <td>19</td>
+                                    <td>20</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">9 - 10</th>
+                                    <td>LENG</td>
+                                    <td>BIO</td>
+                                    <td>BIO</td>
+                                    <td>LENG</td>
+                                    <td>ING</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">10 - 11</th>
+                                    <td>MATE</td>
+                                    <td>E.F</td>
+                                    <td>REL</td>
+                                    <td>MATE</td>
+                                    <td>MATE</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">11 - 12</th>
+                                    <td>BIO</td>
+                                    <td>TECN</td>
+                                    <td>TECN</td>
+                                    <td>HIST</td>
+                                    <td>BIO</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">12 - 12:30</th>
+                                    <td>RECREO</td>
+                                    <td>RECREO</td>
+                                    <td>RECREO</td>
+                                    <td>RECREO</td>
+                                    <td>RECREO</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">12:30 - 13:30</th>
+                                    <td>HIST</td>
+                                    <td>REL</td>
+                                    <td>HIST</td>
+                                    <td>E.F</td>
+                                    <td>LENG</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">13:30 - 14:30</th>
+                                    <td>ING</td>
+                                    <td>LENG</td>
+                                    <td>LENG</td>
+                                    <td>BIO</td>
+                                    <td>TECN</td>
+                                </tr>
+                            </tbody>
+                          </table>
+                    </div>
+                    <div class="col-md-2 col-1"></div>
                 </div>
             </div>
             
