--- a/asignaturas.html
+++ b/asignaturas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Inicio</title>
+		<title>Asignaturas</title>
 		
 		<link rel="stylesheet" href="css/estilos.css"/>
 		<link rel="stylesheet" href="css/asignaturas.css"/>
