--- a/historia.html
+++ b/historia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Inicio</title>
+		<title>Historia</title>
 		
 		<link rel="stylesheet" href="css/estilos.css"/>
 		<link rel="stylesheet" href="css/asignaturas.css"/>
