--- a/inicio2.html
+++ b/inicio2.html
@@ -65,7 +65,7 @@
                     <img src="imgs/foto_noticias.png" alt="Cargando imagen...">
                 </div>
                 </div>
-                <div id="texto" class="col-md-6 col-12">
+                <div id="texto" class="izq col-md-6 col-12">
                     <div>
                         <h4>Curso 2019/2020. Inscripción en la EvAU</h4> 
                         <span>Pasos a seguir para inscribirse en la EvAU</span><br>
@@ -95,16 +95,16 @@
             
             <hr>
             <div class="row">
-                <div class="col-md-4 col-12" id="educamadrid">
+                <div class="col-md-4 col-12 centrar" id="educamadrid">
                     EducaMadrid - 2020 - Consejer&iacute;a de Educaci&oacute;n y Juventud
                 </div>
-                <div class="col-md-4 col-12" id="cont">
+                <div class="col-md-4 col-12 centrar" id="cont">
                     <span class="icon-phone"></span>  Tfno: 913651271
                     <br/>
                     <span class="icon-envelop"></span>  e-mail: <a href="mailto:ies.sanisidro.madrid@educa.madrid.org">ies.sanisidro.madrid@educa.madrid.org</a>
                 </div>
                 
-                <div class="col-md-4 col-12" id="madrid">
+                <div class="col-md-4 col-12 centrar" id="madrid">
                     <img src="imgs/madrid1.png">
                     <img src="imgs/madrid2.png">
                 </div>
