--- a/matematicas.html
+++ b/matematicas.html
@@ -60,7 +60,7 @@
 		<br/>
 		<div class="row">
             <div class="col-md-4 col-0"></div>
-            <div class="col-md-4 col-12" id="asigs">
+            <div class="col-md-4 col-12 centrar" id="asigs">
                 <p id="nomasig">Matem&aacute;ticas</p>
                 <button class="btn">Temario</button><br><br>
                 <button class="btn">Trabajos</button><br><br>
@@ -75,16 +75,16 @@
 		
 		<hr>
 		<div class="row">
-			<div class="col-md-4 col-12" id="educamadrid">
+			<div class="col-md-4 col-12 centrar" id="educamadrid">
 				EducaMadrid - 2020 - Consejer&iacute;a de Educaci&oacute;n y Juventud
 			</div>
-			<div class="col-md-4 col-12" id="cont">
+			<div class="col-md-4 col-12 centrar" id="cont">
 				<span class="icon-phone"></span>  Tfno: 913651271
 				<br/>
 				<span class="icon-envelop"></span>  e-mail: <a href="mailto:ies.sanisidro.madrid@educa.madrid.org">ies.sanisidro.madrid@educa.madrid.org</a>
 			</div>
 			
-			<div class="col-md-4 col-12" id="madrid">
+			<div class="col-md-4 col-12 centrar" id="madrid">
 				<img src="imgs/madrid1.png">
 				<img src="imgs/madrid2.png">
 			</div>
