--- a/mapadelcentro.html
+++ b/mapadelcentro.html
@@ -4,7 +4,6 @@
 		<title>Mapa del centro</title>
 		
 		<link rel="stylesheet" href="css/estilos.css"/>
-		<link rel="stylesheet" href="css/mapadelcentro.css"/>
 		<link rel="stylesheet" href="fonts.css"/>
 		
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" crossorigin="anonymous"/>
@@ -58,7 +57,7 @@
 		  </li>
 		</ul>
 		<br/>
-		<div id="mapa">
+		<div class="centrar">
             <p ID="titulo">MAPA DEL CENTRO</p>
             <img src="imgs/mapa_del_centro.jpg">
 		</div>
@@ -67,16 +66,16 @@
 		
 		<hr>
 		<div class="row">
-			<div class="col-md-4 col-12" id="educamadrid">
+			<div class="col-md-4 col-12 centrar" id="educamadrid">
 				EducaMadrid - 2020 - Consejer&iacute;a de Educaci&oacute;n y Juventud
 			</div>
-			<div class="col-md-4 col-12" id="cont">
+			<div class="col-md-4 col-12 centrar" id="cont">
 				<span class="icon-phone"></span>  Tfno: 913651271
 				<br/>
 				<span class="icon-envelop"></span>  e-mail: <a href="mailto:ies.sanisidro.madrid@educa.madrid.org">ies.sanisidro.madrid@educa.madrid.org</a>
 			</div>
 			
-			<div class="col-md-4 col-12" id="madrid">
+			<div class="col-md-4 col-12 centrar" id="madrid">
 				<img src="imgs/madrid1.png">
 				<img src="imgs/madrid2.png">
 			</div>
