--- a/normativa2.html
+++ b/normativa2.html
@@ -4,7 +4,6 @@
 		<title>Normativa</title>
 		
 		<link rel="stylesheet" href="css/estilos.css"/>
-		<link rel="stylesheet" href="css/normativa.css"/>
 		<link rel="stylesheet" href="fonts.css"/>
 		
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" crossorigin="anonymous"/>
@@ -57,7 +56,7 @@
 			</li>
 			</ul>
 			<br/>
-			<div id="normativa">
+			<div class="centrar">
                 <p>NORMATIVA</p>
                 <iframe src="https://docs.google.com/viewer?srcid=1Hwb-TnFjF0ZOIx2kHdo9sbaCHfnpXfgY&pid=explorer&efh=false&a=v&chrome=false&embedded=true" width="100%" height="680px"></iframe>
 			</div>
@@ -66,16 +65,16 @@
 			
 			<hr>
 			<div class="row">
-				<div class="col-md-4 col-12" id="educamadrid">
+				<div class="col-md-4 col-12 centrar" id="educamadrid">
 					EducaMadrid - 2020 - Consejer&iacute;a de Educaci&oacute;n y Juventud
 				</div>
-				<div class="col-md-4 col-12" id="cont">
+				<div class="col-md-4 col-12 centrar" id="cont">
 					<span class="icon-phone"></span>  Tfno: 913651271
 					<br/>
 					<span class="icon-envelop"></span>  e-mail: <a href="mailto:ies.sanisidro.madrid@educa.madrid.org">ies.sanisidro.madrid@educa.madrid.org</a>
 				</div>
 				
-				<div class="col-md-4 col-12" id="madrid">
+				<div class="col-md-4 col-12 centrar" id="madrid">
 					<img src="imgs/madrid1.png">
 					<img src="imgs/madrid2.png">
 				</div>
