--- a/notas.html
+++ b/notas.html
@@ -2,18 +2,18 @@
 <html>
 	<head>
 		<title>Notas</title>
+
+		
 		
 		<link rel="stylesheet" href="css/estilos.css"/>
 		<link rel="stylesheet" href="fonts.css"/>
 		
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" crossorigin="anonymous"/>
-		<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>		
-        
+		<script language="JavaScript" type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.js"></script>
+		<script language="JavaScript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+		<script language="JavaScript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>		
         <script type="text/javascript" src="js/notas.js"></script>
-
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	</head>
 	<body>
 		<div class="container-fluid">
@@ -48,7 +48,7 @@
 				<a class="nav-link" aria-current="page" href="inicio2.html">Noticias</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link activo" href="normativa2.html">Normativa</a>
+				<a class="nav-link" href="normativa2.html">Normativa</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="ubicacion2.html">Ubicaci&oacute;n</a>
