--- a/contacto2.html
+++ b/contacto2.html
@@ -70,7 +70,7 @@
                 <img src="http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroClosedGood.jpg?t=1393696791256" alt="IES San Isidro" title="" onmouseout="this.src='http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroClosedGood.jpg?t=1393696791256';" onmouseover="this.src='http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroOpened.jpg?t=1393696139888';" style="margin-right: 40px;" width="315" height="420" align="left" class="hoverZoomLink">
                 </div>
                 <div class="col-md-3 col-12 izq " id="datoscontacto">
-                    <img src="imgs/ies_san_isidro_logo.jpg" alt="Logo Instituto" width="300" height="150">   
+                    <img src="https://www.fundacionbertelsmann.org/typo3temp/assets/images/csm_OPC_-_IES_San_Isidro_LOGO_610x295_fa93d380c7_fd6e3eb51d.jpg" alt="Logo Instituto" width="300" height="150">   
                     <br/>
                     <u style="font-family: arial,helvetica,sans-serif; font-size: medium;">Direcci&oacuten:</u>
                     <br/>
