--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,8 @@
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>		
 		
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<script type="text/javascript" src="js/funciones.js"></script>
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	</head>
 	<body>
 
@@ -26,7 +27,7 @@
 			
 			<ul class="nav nav-justified">
 			<li class="nav-item">
-				<a class="nav-link activo" aria-current="page" href="inicio.html">Noticias</a>
+				<a class="nav-link" aria-current="page" href="inicio.html">Noticias</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="normativa.html">Normativa</a>
@@ -35,7 +36,7 @@
 				<a class="nav-link" href="ubicacion.html">Ubicaci&oacute;n</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="contacto.html">Contacto</a>
+				<a class="nav-link activo" href="contacto.html">Contacto</a>
 			</li>
 			</ul>
             <br/>
@@ -51,7 +52,7 @@
                 <img src="http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroClosedGood.jpg?t=1393696791256" alt="IES San Isidro" title="" onmouseout="this.src='http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroClosedGood.jpg?t=1393696791256';" onmouseover="this.src='http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroOpened.jpg?t=1393696139888';" style="margin-right: 40px;" width="315" height="420" align="left" class="hoverZoomLink">
                 </div>
                 <div class="col-md-3 col-12 izq " id="datoscontacto">
-                    <img src="https://www.fundacionbertelsmann.org/typo3temp/assets/images/csm_OPC_-_IES_San_Isidro_LOGO_610x295_fa93d380c7_fd6e3eb51d.jpg" alt="Logo Instituto" width="300" height="150">   
+                    <img src="imgs/ies_san_isidro_logo.jpg" alt="Logo Instituto" width="300" height="150">   
                     <br/>
                     <u style="font-family: arial,helvetica,sans-serif; font-size: medium;">Direcci&oacuten:</u>
                     <br/>
