--- a/filosofia.html
+++ b/filosofia.html
@@ -12,7 +12,8 @@
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>		
 		
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<script type="text/javascript" src="js/funciones.js"></script>
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	</head>
 	<body>
 	<div class="container-fluid">
@@ -31,7 +32,8 @@
 					    <li><a class="dropdown-item" href="calendario.html"><span class="icon-calendar"></span>  Calendario</a></li>
 					    <li><a class="dropdown-item" href="chatprivado.html"><span class="icon-bubble2"></span>  Chat privado</a></li>
                         <li><a class="dropdown-item" href="mapadelcentro.html"><span class="icon-map2"></span>  Mapa del centro</a></li>
-                        <li><a class="dropdown-item" href="notificaciones.html"><span class="icon-bullhorn"></span>  Notificaciones</a></li>
+						<li><a class="dropdown-item" href="notificaciones.html"><span class="icon-bullhorn"></span>  Notificaciones</a></li>
+						<li><a class="dropdown-item" id="cerrarSesion" onclick="cerrarSesion()"><span class="icon-user-minus"></span>  Cerrar sesi&oacute;n</a></li>
 					  </ul>
 			   </div>
             </div>
@@ -62,11 +64,11 @@
             <div class="col-md-4 col-0"></div>
             <div class="col-md-4 col-12 centrar" id="asigs">
                 <p id="nomasig">Filosof&iacute;a</p>
-                <button class="btn">Temario</button><br><br>
-                <button class="btn">Trabajos</button><br><br>
-                <button class="btn">Documentación</button><br><br>
-                <button class="btn">Video apuntes</button><br><br>
-                <button class="btn">Chat privado</button><br><br> 
+                <button class="btn" onclick="window.location='blanco.html'";>Temario</button><br><br>
+                <button class="btn" onclick="window.location='blanco.html'";>Trabajos</button><br><br>
+                <button class="btn" onclick="window.location='blanco.html'";>Documentación</button><br><br>
+                <button class="btn" onclick="window.location='blanco.html'";>Video apuntes</button><br><br>
+                <button class="btn" onclick="window.location='blanco.html'";>Chat privado</button><br><br> 
             </div>
             <div class="col-md-4 col-0"></div>
         </div>
