--- a/ubicacion2.html
+++ b/ubicacion2.html
@@ -16,7 +16,8 @@
    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
    crossorigin=""/>
 
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+		<script type="text/javascript" src="js/funciones.js"></script>
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	</head>
 	<body>
 <!-- BARRA SUPERIOR -->	
@@ -36,6 +37,7 @@
                             <li><a class="dropdown-item" href="chatprivado.html"><span class="icon-bubble2"></span>  Chat privado</a></li>
                             <li><a class="dropdown-item" href="mapadelcentro.html"><span class="icon-map2"></span>  Mapa del centro</a></li>
                             <li><a class="dropdown-item" href="notificaciones.html"><span class="icon-bullhorn"></span>  Notificaciones</a></li>
+                            <li><a class="dropdown-item" id="cerrarSesion" onclick="cerrarSesion()"><span class="icon-user-minus"></span>  Cerrar sesi&oacute;n</a></li>
                         </ul>
                     </div>
                 </div>
@@ -52,10 +54,10 @@
 				<a class="nav-link" aria-current="page" href="inicio2.html">Noticias</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link activo" href="normativa2.html">Normativa</a>
+				<a class="nav-link" href="normativa2.html">Normativa</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="ubicacion2.html">Ubicaci&oacute;n</a>
+				<a class="nav-link activo" href="ubicacion2.html">Ubicaci&oacute;n</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="contacto2.html">Contacto</a>
@@ -65,14 +67,17 @@
 <!-- CONTENIDO -->
          <div class="row">
                <div class="col-12 centrar" id="asigs">
-                  <p id="titulo">UBICACION</p>
+                  <p id="titulo">UBICACI&Oacute;N</p>
             </div>
          </div>
 
 			<div class="row centrar">
                 <div class="col-md-2 col-12 centrar"></div>
                 <div class="col-md-8 col-12 centrar">
-                <div id="mapid">
+                  <div class="google-maps" >
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2148.0812476199512!2d-3.707229828604509!3d40.41227036923288!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x96b9384ccceef217!2sIES%20SAN%20ISIDRO!5e0!3m2!1ses!2ses!4v1611093880271!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                   </div>
+                <!--<div id="mapid">
                     <div class="openStreetMap leaflet-container leaflet-touch leaflet-retina leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom" style="width: 100%; height: 450px; position: relative;" id="openStreetMap0" tabindex="0">
                         <div class="leaflet-pane leaflet-map-pane" style="transform: translate3d(-71px, 0px, 0px);">
                            <div class="leaflet-pane leaflet-tile-pane">
@@ -108,7 +113,7 @@
                            </div>
                         </div>
                      </div>
-                    </div>
+                    </div>-->
                 </div>
                     <div class="col-md-2 col-12 centrar"></div>
             </div>
