--- a/inicioSesion.html
+++ b/inicioSesion.html
@@ -38,8 +38,8 @@
                     <hr>
                     <div id="form">
                         <form action="inicio2.html" method="get">
-                            <input class="ancho" type="email" id="email" name="email" placeholder="E-mail"><br><br>
-                            <input class="ancho" type="password" id="password" name="password" placeholder="Contrase&ntilde;a"><br><br>
+                            <input class="ancho" type="email" id="email" name="email" placeholder="* E-mail" required><br><br>
+                            <input class="ancho" type="password" id="password" name="password" placeholder="* Contrase&ntilde;a" required><br><br>
                             <div class="justificar"><a href="" class="negro">He olvidado mi contrase&ntilde;a</a><br><br></div>
                             <input class="ancho" type="submit" class="btn btn-warning" id="submit" value="Iniciar sesi&oacute;n">
                         </form>
