--- a/chatprivado.html
+++ b/chatprivado.html
@@ -15,7 +15,8 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" crossorigin="anonymous"/>
 		<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>		
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>	
+        <script type="text/javascript" src="js/funciones.js"></script>	
 		
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     </head>
@@ -77,7 +78,7 @@
                         </div>
                         <div class="srch_bar">
                         <div class="stylish-input-group">
-                            <input type="text" class="search-bar"  placeholder="Search" >
+                            <input type="text" class="search-bar"  placeholder="Búsqueda" >
                             <span class="input-group-addon">
                             <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
                             </span> </div>
