--- a/contacto2.html
+++ b/contacto2.html
@@ -69,7 +69,7 @@
 
 			<div class="row">
             <div class="col-lg-3 col-12 centrar" id="fotopuerta">
-               <img src="http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroClosedGood.jpg?t=1393696791256" alt="IES San Isidro" title="" onmouseout="this.src='http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroClosedGood.jpg?t=1393696791256';" onmouseover="this.src='http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroOpened.jpg?t=1393696139888';" style="margin-right: 40px;" width="315" height="420" class="hoverZoomLink">
+               <img src="http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroClosedGood.jpg?t=1393696791256" alt="IES San Isidro" title="" onmouseout="this.src='http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroClosedGood.jpg?t=1393696791256';" onmouseover="this.src='http://www.educa2.madrid.org/web/educamadrid/principal/files/f148a3ad-77f7-4315-8bc5-e3dd28b1e4d3/Tabl%C3%B3n/Datos/IsidroOpened.jpg?t=1393696139888';" width="315" height="420" class="hoverZoomLink">
             </div>
             <div class="col-lg-1 col-12"></div>
             <div class="col-lg-3 col-12 izq" id="datoscontacto">
